Add number of free beds to hospitals component

--- a/Frontend/medhead/src/app/hospitals/hospitals.component.html
+++ b/Frontend/medhead/src/app/hospitals/hospitals.component.html
@@ -35,6 +35,7 @@
           <p>A la distance de: <strong>{{distance}} km</strong> pour {{time}} minutes</p>
           <!-- <p>les coordonnées sont {{coordonates}}</p> format x,y -->
           <p>Adresse: <strong>{{address}}</strong></p>
+          <p>Nombre de lits disponibles: <strong>{{numberFreeBed}}</strong></p>
         </div>
       </div>
     </div>
